<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:background="@color/white_transparent">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:background="@drawable/inputs"
            android:drawableStart="@drawable/email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:importantForAutofill="no"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/login_email"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:importantForAutofill="no"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/forget_password"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_pink"
            android:textSize="24sp" />



        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forget_password_link"
            android:padding="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:background="@color/green"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/new_account_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/new_account"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"/>


        </RelativeLayout>

</RelativeLayout>