<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:background="@color/white_transparent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/dark_green">

            <AutoCompleteTextView
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="24sp"
                android:hint="@string/register_username"
                android:drawableStart="@drawable/username"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:textIsSelectable="false"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/dark_green">

            <AutoCompleteTextView
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:textSize="24sp"
                android:hint="@string/email_hint"
                android:drawableStart="@drawable/email"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:textIsSelectable="false"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/dark_green">

            <AutoCompleteTextView
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:textSize="24sp"
                android:hint="@string/password_hint"
                android:drawableStart="@drawable/password"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:textIsSelectable="false"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/dark_green">

            <AutoCompleteTextView
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:textSize="24sp"
                android:hint="@string/confirm_password"
                android:drawableStart="@drawable/password"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:textIsSelectable="false"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/register_button"
            android:textAllCaps="true"
            android:background="@color/green"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/already_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/already_have_an_account"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_pink"
            android:textSize="24sp" />

    </LinearLayout>

</RelativeLayout>